--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -13,7 +13,10 @@ $purple: #9561e2;
 $pink: #f66d9b;
 $red: #e3342f;
 $orange: #f6993f;
+$dark_orange: #b57230;
 $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+$white: #fff;
+$black: #353535;
