--- a/public/css/frontend.css
+++ b/public/css/frontend.css
@@ -10904,6 +10904,10 @@ h1.title {
   border-radius: 5px;
 }
 
+.page-image {
+  max-width: 300px;
+}
+
 footer {
   padding: 25px;
   background: #353535;
